--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "ws": "^8.16.0"
   },
   "scripts": {
